# msvc-alloca

./: Cargo.toml  Makefile  README.md  _alloca_wrapper.c  _alloca_wrapper_alt.c  build.rs
example/: Cargo.toml
example/.cargo/: config.toml
example/src/: main.rs
msvc-alloca/: Cargo.toml  _alloca_wrapper.c  build.rs
msvc-alloca-example/: Cargo.toml
src/: lib.rs
